# RustCINRAD

./: .gitignore  Cargo.toml  README.md  compare.py  log.md
.github/workflows/: release.yml
src/: helpers.rs  io.rs  main.rs  projection.rs
src/data/colormap/: VEL.cmap
src/io/: base.rs  dtype.rs  grid.rs  level2.rs  mod.rs  model.rs
src/visualize/: colormap.rs  mod.rs  ppi.rs
