[package]
name = "RustCINRAD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[interact]
name = "interact"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
ndarray = "0.15.6"
# pyo3 = { version = "0.21.2", features = ["extension-module"] }
# netcdf = "0.9.1"

