[package]
name = "RustCINRAD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[interact]
name = "interact"
crate-type = ["cdylib"]

[dependencies]
binread = "2.2.0"
image = "0.24.5"
ndarray = "0.15.6"
serde_json = "1.0.117"

